# meet2task

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  config_loader.py  dialog_registry.py  google_drive.py  localLLMmanager.py  local_llm.py  media_pipeline.py  pipeline_logger.py  pyproject.toml  requirements.txt  telegram_voice_bot.py  watch_drop.py  webm_to_txt.py  yandex_disk.py
data/: dialogues.db
prompt/: process_transcription.txt
results/: T_17.03.26_19-03-07.txt
src/meet2task/: __init__.py  config.py  dialog_registry.py  google_drive.py  local_llm.py  local_llm_manager.py  logging_config.py  media_pipeline.py  telegram_bot.py  transcription.py  watch_drop.py  yandex_disk.py
